--- a/products.html
+++ b/products.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Bootstrap E-commerce Templates</title>
+		<title>SirenaMorena</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<!--[if ie]><meta content='IE=8' http-equiv='X-UA-Compatible'/><![endif]-->
@@ -29,15 +29,15 @@
 		<div id="top-bar" class="container">
 			<div class="row">
 				<div class="span4">
-					
+
 				</div>
 				<div class="span8">
 					<div class="account pull-right">
 						<ul class="user-menu">
-							<li><a href="#">My Account</a></li>
-							<li><a href="cart.html">Your Cart</a></li>
+							<li><a href="#">Mi Cuenta</a></li>
+							<li><a href="cart.html">Carrito</a></li>
 							<li><a href="checkout.html">Checkout</a></li>
-							<li><a href="register.html">Login</a></li>
+							<li><a href="register.php">Login</a></li>
 						</ul>
 					</div>
 				</div>
@@ -46,27 +46,14 @@
 		<div id="wrapper" class="container">
 			<section class="navbar main-menu">
 				<div class="navbar-inner main-menu">
-					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo" alt="" height="42" width="110"></a>
+					<a href="index.html" class="logo pull-left"><img src="themes/images/logo.png" class="site_logo imgcenter" alt="" height="42" width="110"></a>
 					<nav id="menu" class="pull-right">
 						<ul>
-							<li><a href="./products.html">Woman</a>
-								<ul>
-									<li><a href="./products.html">Lacinia nibh</a></li>
-									<li><a href="./products.html">Eget molestie</a></li>
-									<li><a href="./products.html">Varius purus</a></li>
-								</ul>
+							<li><a href="./products.html">MUJER</a>
 							</li>
-							<li><a href="./products.html">Man</a></li>
-							<li><a href="./products.html">Sport</a>
-								<ul>
-									<li><a href="./products.html">Gifts and Tech</a></li>
-									<li><a href="./products.html">Ties and Hats</a></li>
-									<li><a href="./products.html">Cold Weather</a></li>
-								</ul>
+							<li><a href="./products.html">HOMBRE</a></li>
+							<li><a href="./products.html">ACCESORIOS</a>
 							</li>
-							<li><a href="./products.html">Hangbag</a></li>
-							<li><a href="./products.html">Best Seller</a></li>
-							<li><a href="./products.html">Top Seller</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -254,39 +241,36 @@
 			<section id="footer-bar">
 				<div class="row">
 					<div class="span3">
-						<h4>Navigation</h4>
+						<h4>Navegación</h4>
 						<ul class="nav">
-							<li><a href="./index.html">Homepage</a></li>
-							<li><a href="./about.html">About Us</a></li>
-							<li><a href="./contact.html">Contac Us</a></li>
-							<li><a href="./cart.html">Your Cart</a></li>
+							<li><a href="./index.html">Inicio</a></li>
+							<li><a href="./about.html">Acerca de</a></li>
+							<li><a href="./contact.html">Contáctanos</a></li>
+							<li><a href="./cart.html">Carrito</a></li>
 							<li><a href="./register.html">Login</a></li>
 						</ul>
 					</div>
 					<div class="span4">
-						<h4>My Account</h4>
+						<h4>Mi Cuenta</h4>
 						<ul class="nav">
-							<li><a href="#">My Account</a></li>
-							<li><a href="#">Order History</a></li>
-							<li><a href="#">Wish List</a></li>
-							<li><a href="#">Newsletter</a></li>
+							<li><a href="#">Mi Cuenta</a></li>
+							<li><a href="#">Historial de Compras</a></li>
 						</ul>
 					</div>
 					<div class="span5">
 						<p class="logo"><img src="themes/images/logo.png" class="site_logo" alt=""></p>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. the  Lorem Ipsum has been the industry's standard dummy text ever since the you.</p>
+						<p>SIRENA MORENA es una marca mexicana de ropa y accesorios hechos a mano.
+						Desde la ciudad de Mérida, Yucatán, a todo México.</p>
 						<br/>
 						<span class="social_icons">
-							<a class="facebook" href="#">Facebook</a>
-							<a class="twitter" href="#">Twitter</a>
-							<a class="skype" href="#">Skype</a>
-							<a class="vimeo" href="#">Vimeo</a>
+							<a class="facebook" href="https://www.facebook.com/Sirena-Morena-1626795787587573/">Facebook</a>
+							<a class="instagram" href="https://www.instagram.com/sirenamorena_mx/">Instagram</a>
 						</span>
 					</div>
 				</div>
 			</section>
 			<section id="copyright">
-				<span>Copyright 2013 bootstrappage template  All right reserved.</span>
+				<span>Copyright 2017 Sirena Morena.</span>
 			</section>
 		</div>
 		<script src="themes/js/common.js"></script>
