--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 						Desde la ciudad de Mérida, Yucatán, a todo México.</p>
 						<br/>
 						<span class="social_icons">
-							<a class="facebook" href="https://www.facebook.com/Sirena-Morena-1626795787587573/">Facebook</a>
+							<a class="facebook" href="https://www.facebook.com/Sirena-Morena-1626795787587573/"><span class="social social-facebook"></span></a>
 							<a class="instagram" href="https://www.instagram.com/sirenamorena_mx/">Instagram</a>
 						</span>
 					</div>
